tutorials/outputs/topic-08-fifos_output.txt
INFO: Using SIF: /software/cerebras/cs_sdk-1.2.0/sdk-cbcore-202406260214-3-f03c8e31.sif
INFO: User's specified CSL_IMPORT_PATH=/software/cerebras/cs_sdk-1.2.0/
NOTE: CSL_IMPORT_PATH accepts colon separated list of paths generated by 'realpath <path>'
INFO: Bind path /software/cerebras/cs_sdk-1.2.0/
INFO: Commands of user-specified mount paths:  --bind=/software/cerebras/cs_sdk-1.2.0/
./memcpyEdge/west.csl:18:37: error: expected color ID in the range [0,24), got: 32
param USER_IN_2: color = @get_color(32);
                                    ^
./layout.csl:64:3: error: semantic error in module imported here
  @set_tile_code(0, 0, "memcpyEdge/west.csl", .{
  ^
